--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,14 @@
 .btn_sort {
     background-image: url("../ui_images/sort_btn.png");
 }
+
+.universal_border_marker {
+    border: solid 2px;
+    border-color: #FFFDDB;
+    border-radius: 15px;
+    background-image: linear-gradient(transparent, transparent);
+}
+
 /*
 ***************************************************************************************
 Telas
@@ -54,6 +62,20 @@ Telas
 .border_0_radius {
     border-radius: 0px;
 }
+
+.fr2_btns_musics_list_border {
+    border-bottom: none;
+    border-left: none;
+    border-right: none;
+}
+
+.fr2_btns_musics_list_border_down {
+    border-top: none;
+    border-left: none;
+    border-right: none;
+}
+
+
 
 /*
 ======================================================================================
