--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,10 @@
     box-shadow: 2px 0px 5px rgba(31, 214, 96, 0.3);
 }
 
+.universal_no_background {
+    background-image: linear-gradient(transparent, transparent);
+}
+
 .universal_no_border {
     border: none 0px;
 }
@@ -75,7 +79,25 @@ Telas
     border-right: none;
 }
 
+.fr2_btn_add_playlist {
+    background-image: url("../ui_images/new_playlist.png");
+}
 
+.fr2_btns_playlist_list_border {
+    border: solid 3px #393939;
+    border-radius: 15px;
+    background-color: transparent;
+    background-image: linear-gradient(transparent,transparent);
+    box-shadow: 0px 4px 4px rgba(131, 131, 131, 0.25);
+}
+
+.fr2_btns_addition {
+    background-image: url("../ui_images/addition.png");
+}
+
+.fr2_btns_cancel {
+    background-image: url("../ui_images/cancel.png");
+}
 
 /*
 ======================================================================================
@@ -111,6 +133,10 @@ Fonts size
 
 .font_size_20 {
     font-size: 20px;
+}
+
+.font_size_16 {
+    font-size: 16px;
 }
 
 /*
